# logrotator

./: Cargo.toml  README.md
.github/workflows/: actionlint.yml  release.yml  review.yml  validate-renovate.yml
src/: main.rs  model.rs
