[package]
name = "logrotater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["rt", "macros", "time", "io-std", "io-util"] }
clap = { version = "4.1.6", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
