[package]
name = "logrotater"
version = "0.1.1"
edition = "2021"
authors = ["yanorei32"]
description = "A simple logrotater"
readme = "README.md"
repository = "https://github.com/yanorei32/logrotater/"
license = "BSD-2-Clause"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros", "time", "io-std", "io-util"] }
clap = { version = "4.5.4", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
